# ebsd-api-server

./: README.md  pyproject.toml
ebsd_api_server/: main.py
ebsd_api_server/routers/: ebsd.py  indexing.py  preindexed_maps.py  process_intensities.py  vbse.py
ebsd_api_server/utils/: image.py
tests/: test_python_api.py
